force-app/main/default/objects/Charket__WeChatPass__c/Charket__WeChatPass__c.object-meta.xml
<CustomObject>
    <label>WeChat Pass</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeChat Passes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>