force-app/main/default/objects/Charket__WeChatPass__c/fields/Charket__Color__c.field-meta.xml
<CustomField>
    <fullName>Charket__Color__c</fullName>
    <label>Color</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Color010</fullName>
                <default>true</default>
                <label>Color010</label>
            </value>
            <value>
                <fullName>Color020</fullName>
            </value>
            <value>
                <fullName>Color030</fullName>
            </value>
            <value>
                <fullName>Color040</fullName>
            </value>
            <value>
                <fullName>Color050</fullName>
            </value>
            <value>
                <fullName>Color060</fullName>
            </value>
            <value>
                <fullName>Color070</fullName>
            </value>
            <value>
                <fullName>Color080</fullName>
            </value>
            <value>
                <fullName>Color090</fullName>
            </value>
            <value>
                <fullName>Color100</fullName>
            </value>
            <value>
                <fullName>Color101</fullName>
            </value>
            <value>
                <fullName>Color102</fullName>
            </value>
            <value>
                <fullName>Color081</fullName>
            </value>
            <value>
                <fullName>Color082</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>