force-app/main/default/objects/Charket__WeChatPass__c/fields/Charket__Detail__c.field-meta.xml
<CustomField>
    <fullName>Charket__Detail__c</fullName>
    <label>Detail</label>
    <length>3072</length>
    <type>LongTextArea</type>
</CustomField>