force-app/main/default/objects/Charket__WeChatPass__c/fields/Charket__FixedDaysValidAfter__c.field-meta.xml
<CustomField>
    <fullName>Charket__FixedDaysValidAfter__c</fullName>
    <label>Fixed Days Valid After</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>