force-app/main/default/objects/Charket__WeChatPass__c/fields/Charket__WhatId__c.field-meta.xml
<CustomField>
    <fullName>Charket__WhatId__c</fullName>
    <label>Related To</label>
    <length>18</length>
    <type>Text</type>
</CustomField>