force-app/main/default/objects/Charket__WeChatPass__c/validationRules/Charket__Date_Type_Fix_Begin_Term_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Charket__Date_Type_Fix_Begin_Term_Limit</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Charket__DateType__c  ,&apos;Fixed Term&apos;), ISBLANK(Charket__FixedDaysValidAfter__c))</errorConditionFormula>
    <errorDisplayField>Charket__FixedDaysValidAfter__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>