force-app/main/default/objects/Charket__WeChatPass__c/validationRules/Charket__Date_Type_Fixed_Time_Range_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Charket__Date_Type_Fixed_Time_Range_Limit</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Charket__DateType__c  ,&apos;Fixed Time Range&apos;), ISBLANK(Charket__StartTime__c))</errorConditionFormula>
    <errorDisplayField>Charket__StartTime__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>