force-app/main/default/objects/Charket__WeChatPass__c/validationRules/Charket__Fixed_Term_Time_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Charket__Fixed_Term_Time_Limit</fullName>
    <active>true</active>
    <errorConditionFormula>Charket__StartTime__c  &gt; Charket__EndTime__c</errorConditionFormula>
    <errorDisplayField>Charket__StartTime__c</errorDisplayField>
    <errorMessage>The pass end time should not be before the start time.</errorMessage>
</ValidationRule>