force-app/main/default/objects/Charket__WeChatPass__c/validationRules/Charket__Quantity_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Charket__Quantity_Limit</fullName>
    <active>true</active>
    <errorConditionFormula>Charket__LimitPerFollower__c  &gt;  Charket__Quantity__c</errorConditionFormula>
    <errorMessage>The Limit Per Follower can&apos;t larger than Quantity.</errorMessage>
</ValidationRule>