force-app/main/default/objects/Charket__WeChatPass__c/validationRules/Charket__Title_Length_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Charket__Title_Length_Limit</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Name )  &gt; 27</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>The Title value can contain 27 characters at most.</errorMessage>
</ValidationRule>