force-app/main/default/objects/Charket__WeChatPass__c/validationRules/Charket__Update_Base_Info_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Charket__Update_Base_Info_Limit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
              OR(ISPICKVAL(Charket__Status__c, &apos;Approved&apos;), ISPICKVAL(Charket__Status__c, &apos;Delivered&apos;)),
              OR( ISCHANGED(Charket__WeChatAccount__c), ISCHANGED(Name),ISCHANGED(Charket__BrandName__c), ISCHANGED(Charket__CardId__c),
               ISCHANGED(Charket__Detail__c), ISCHANGED(Charket__FixedDaysValidAfter__c),ISCHANGED(Charket__FixedDaysValidFor__c),
               ISCHANGED(Charket__DateType__c))
            )</errorConditionFormula>
    <errorMessage>These fields (WeChat Account, Title, Brand Name, Card Id, Detail, Fixed Begin Term, Fixed Term, Date Type) can&apos;t be edit when this pass has been approved.</errorMessage>
</ValidationRule>